[package]
name = "etherscan-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["blocking"]}
scraper = "0.18.1"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.108"
